remove tmp fix of not showing municipalities when more than one found

--- a/src/app/+viewer/facts/facts.component.css
+++ b/src/app/+viewer/facts/facts.component.css
@@ -13,7 +13,9 @@
 .title {
   text-align: right;
 }
-
+.title {
+  width: 33.33333333%;
+}
 .title span:after {
   content: ':';
 }
